--- a/samples/SharedDemo/wwwroot/css/styles.css
+++ b/samples/SharedDemo/wwwroot/css/styles.css
@@ -1616,12 +1616,12 @@ body {
     background: #40babd !important;
 }
 
-.group.custom {
+.group:not(.default) {
     outline: 2px solid black;
     background-color: #6fbb6e;
 }
 
-    .group.custom > span.title {
+    .group:not(.default) > span.title {
         padding: 20px;
         position: absolute;
         left: 50%;
