--- a/src/Blazor.Diagrams/Components/GroupNodes.razor
+++ b/src/Blazor.Diagrams/Components/GroupNodes.razor
@@ -1,10 +1,9 @@
 ﻿@code {
-    [CascadingParameter]
-    public GroupModel Group { get; set; }
+    [Parameter]
+    public GroupModel Group { get; set; } = null!;
 }
 
-<div class="layer"
-     style="top: @((-Group.Position.Y).ToInvariantString())px; left: @((-Group.Position.X).ToInvariantString())px">
+<div class="children" style="top: @((-Group.Position.Y).ToInvariantString())px; left: @((-Group.Position.X).ToInvariantString())px">
     @foreach (var node in Group.Children)
     {
         if (node is GroupModel g)
