Add support for SVG groups

--- a/samples/SharedDemo/Demos/Nodes/SvgNodeWidget.razor
+++ b/samples/SharedDemo/Demos/Nodes/SvgNodeWidget.razor
@@ -1,12 +1,12 @@
-﻿<path d="M 0 -50 L 50 -50 L 50 -10 A 1 1 0 0 0 50 10 L 50 50 L 0 50 L 0 10 A 1 1 0 0 0 0 -10 Z"
+﻿<path d="M 52.4125 92.3245 v -34.4675 c 0 -16.51 -5.8745 -31.603 -16.988 -43.6475 c -8.358 -9.058 -16.86 -13.272 -17.218 -13.447 c -2.3245 -1.1365 -5.071 -0.995 -7.2655 0.3755 c -2.195 1.37 -3.529 3.775 -3.529 6.3625 v 84.824 c -4.142 0 -7.5 3.358 -7.5 7.5 s 3.358 7.5 7.5 7.5 v 69.9995 c 0 12.4265 10.074 22.5005 22.5 22.5005 c 12.427 0 22.5 -10.0735 22.5 -22.5005 V 107.3245 c 4.142 0 7.5 -3.358 7.5 -7.5 S 56.5545 92.3245 52.4125 92.3245 z M 29.9125 184.8245 c -4.1355 0 -7.5 -3.3645 -7.5 -7.5005 V 107.3245 h 15 v 69.9995 C 37.4125 181.46 34.048 184.8245 29.9125 184.8245 z M 37.4125 57.857 v 34.4675 h -15 V 22.3215 C 29.48 29.222 37.4125 40.773 37.4125 57.857 z"
       fill="black"></path>
 
 <PortRenderer Port="Node.GetPort(PortAlignment.Left)">
-    <circle cx="0" cy="0" r="8"></circle>
+    <circle cx="7" cy="100" r="7"></circle>
 </PortRenderer>
 
 <PortRenderer Port="Node.GetPort(PortAlignment.Right)">
-    <circle cx="50" cy="0" r="8"></circle>
+    <circle cx="52" cy="100" r="7"></circle>
 </PortRenderer>
 
 @code {
