--- a/src/Blazor.Diagrams/Components/GroupNodes.razor
+++ b/src/Blazor.Diagrams/Components/GroupNodes.razor
@@ -1,18 +1,39 @@
 ﻿@code {
     [Parameter]
     public GroupModel Group { get; set; } = null!;
+
+    // Remove duplicated code
 }
 
-<div class="children" style="top: @((-Group.Position.Y).ToInvariantString())px; left: @((-Group.Position.X).ToInvariantString())px">
-    @foreach (var node in Group.Children)
-    {
-        if (node is GroupModel g)
+@if (Group is SvgGroupModel)
+{
+    <g class="children" transform="translate(@((-Group.Position.X).ToInvariantString()) @((-Group.Position.Y).ToInvariantString()))">
+        @foreach (var node in Group.Children)
         {
-            <GroupRenderer @key="g.Id" Group="g"></GroupRenderer>
+            if (node is GroupModel g)
+            {
+                <GroupRenderer @key="g.Id" Group="g"></GroupRenderer>
+            }
+            else
+            {
+                <NodeRenderer @key="node.Id" Node="node"></NodeRenderer>
+            }
         }
-        else
+    </g>
+}
+else
+{
+    <div class="children" style="top: @((-Group.Position.Y).ToInvariantString())px; left: @((-Group.Position.X).ToInvariantString())px">
+        @foreach (var node in Group.Children)
         {
-            <NodeRenderer @key="node.Id" Node="node"></NodeRenderer>
+            if (node is GroupModel g)
+            {
+                <GroupRenderer @key="g.Id" Group="g"></GroupRenderer>
+            }
+            else
+            {
+                <NodeRenderer @key="node.Id" Node="node"></NodeRenderer>
+            }
         }
-    }
-</div>
+    </div>
+}
