Use butt stroke linecap instead of round
Because they go inside ports and prevent pointer events

--- a/src/Blazor.Diagrams/Components/LinkWidget.razor
+++ b/src/Blazor.Diagrams/Components/LinkWidget.razor
@@ -29,7 +29,7 @@
               stroke="@color"
               stroke-width="12"
               d="@result.Paths[i]"
-              stroke-linecap="round"
+              stroke-linecap="butt"
               stroke-opacity="0"
               fill="none"
               @onmousedown="e => OnMouseDown(e, index)"
