Add custom svg group demo

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -94,6 +94,9 @@
                 <li>
                     <a href="demos/custom-group" class="list-group-item list-group-item-action bg-light">Custom group</a>
                 </li>
+                <li>
+                    <a href="demos/custom-svg-group" class="list-group-item list-group-item-action bg-light">Custom SVG group</a>
+                </li>
             </DemoMenu>
             <DemoMenu Text="Algorithms">
                 <li>
