--- a/src/Blazor.Diagrams/Components/DefaultGroupWidget.razor
+++ b/src/Blazor.Diagrams/Components/DefaultGroupWidget.razor
@@ -7,5 +7,5 @@
 
 @foreach (var port in Group.Ports)
 {
-    <PortRenderer Port="port" Class="group-port"></PortRenderer>
+    <PortRenderer @key="port" Port="port" Class="group-port"></PortRenderer>
 }
