--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -105,7 +105,7 @@ g.group.default rect {
     fill: rgb(198, 198, 50);
 }
 
-g.group.default.selected rect {
+g.group.default.selected > rect {
     outline: 2px solid green;
 }
 
