--- a/src/Blazor.Diagrams/Components/LinkVertexWidget.razor
+++ b/src/Blazor.Diagrams/Components/LinkVertexWidget.razor
@@ -4,12 +4,7 @@
         fill="@ColorToUse"
         cursor="move"
         @ondblclick="OnDoubleClick"
-        @onmousedown="OnMouseDown"
-        @onmousedown:stopPropagation
-        @onmouseup="OnMouseUp"
-        @onmouseup:stopPropagation
-        @ontouchstart="OnTouchStart"
-        @ontouchstart:stopPropagation
-        @ontouchend="OnTouchEnd"
-        @ontouchend:preventDefault
-        @ontouchend:stopPropagation />
+        @onpointerdown="OnPointerDown"
+        @onpointerup="OnPointerUp"
+        @onpointerdown:stopPropagation
+        @onpointerup:stopPropagation />
