--- a/src/Blazor.Diagrams/_Imports.razor
+++ b/src/Blazor.Diagrams/_Imports.razor
@@ -5,3 +5,4 @@
 @using Blazor.Diagrams.Components.Renderers
 @using Blazor.Diagrams.Core.Geometry;
 @using Blazor.Diagrams.Models;
+@using Blazor.Diagrams.Components.UserActions;
