--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -17,8 +17,8 @@
     position: absolute;
     pointer-events: none;
     -webkit-transform-origin: 0px 0px;
-        -ms-transform-origin: 0px 0px;
-            transform-origin: 0px 0px;
+    -ms-transform-origin: 0px 0px;
+    transform-origin: 0px 0px;
     width: 100%;
     height: 100%;
     overflow: visible;
@@ -28,8 +28,8 @@
     position: absolute;
     pointer-events: none;
     -webkit-transform-origin: 0px 0px;
-        -ms-transform-origin: 0px 0px;
-            transform-origin: 0px 0px;
+    -ms-transform-origin: 0px 0px;
+    transform-origin: 0px 0px;
     width: 100%;
     height: 100%;
     overflow: visible;
@@ -38,53 +38,63 @@
 .node {
     position: absolute;
     -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     cursor: move;
     pointer-events: all;
 }
 
-    .node.locked {
-        cursor: pointer;
-    }
+.node.locked {
+    cursor: pointer;
+}
 
 .link {
     pointer-events: visiblePainted;
     cursor: pointer;
 }
 
-    .link path.selection-helper:hover {
-        stroke-opacity: 0.05;
-    }
+.link path.selection-helper:hover {
+    stroke-opacity: 0.05;
+}
 
 .diagram-navigator {
     z-index: 10;
 }
 
-    .diagram-navigator .current-view {
-        position: absolute;
-        border: 2px solid black;
-    }
+.diagram-navigator .current-view {
+    position: absolute;
+    border: 2px solid black;
+}
 
 .group {
     position: absolute;
     -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     cursor: move;
     pointer-events: all;
 }
 
-    .group .children {
-        position: absolute;
-        overflow: visible;
-        pointer-events: none;
-    }
+.group .children {
+    position: absolute;
+    overflow: visible;
+    pointer-events: none;
+}
 
 .link foreignObject {
     overflow: visible;
     pointer-events: none;
 }
+
+div.user-action {
+    position: absolute;
+}
+
+.user-action {
+    pointer-events: all;
+    cursor: pointer;
+}
+
 /*# sourceMappingURL=wwwroot\style.css.map */
