--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -26,7 +26,7 @@
             <LinkRenderer @key="link" Link="link" />
         }
         
-        <UserActionsLayerRenderer Svg="@true"></UserActionsLayerRenderer>
+        <ControlsLayerRenderer Svg="@true"></ControlsLayerRenderer>
     </svg>
 
     @* Nodes *@
@@ -42,7 +42,7 @@
             <NodeRenderer @key="node" Node="node" />
         }
         
-        <UserActionsLayerRenderer Svg="@false"></UserActionsLayerRenderer>
+        <ControlsLayerRenderer Svg="@false"></ControlsLayerRenderer>
     </div>
 
     @Widgets
