--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -88,11 +88,11 @@
     pointer-events: none;
 }
 
-div.user-action {
+div.control {
     position: absolute;
 }
 
-.user-action {
+.executable.control {
     pointer-events: all;
     cursor: pointer;
 }
