Add ILinkable interface for models that can have links to make link creation more generic
Add TargetAnchorFactory option
Options (links etc) are now readonly, but their properties are mutable

--- a/src/Blazor.Diagrams/Components/Controls/RemoveControlWidget.razor
+++ b/src/Blazor.Diagrams/Components/Controls/RemoveControlWidget.razor
@@ -14,7 +14,7 @@ else
 @code
 {
     [Parameter]
-    public Control Control { get; set; } = null!;
+    public RemoveControl Control { get; set; } = null!;
 
     [Parameter]
     public Model Model { get; set; } = null!;
