--- a/docs/Diagram-Demo/Pages/Diagrams.razor
+++ b/docs/Diagram-Demo/Pages/Diagrams.razor
@@ -6,6 +6,9 @@
 
 <!-- required to resolve DiagramCanvas component -->
 @using Blazor.Diagrams.Components
+@using Blazor.Diagrams.Core.Options
+@using Blazor.Diagrams.Options
+@using Blazor.Diagrams
 
 <h1>Z Blazor Diagrams</h1>
 
@@ -31,19 +34,19 @@ or it will not be rendered.
   {
     base.OnInitialized();
 
-    var options = new DiagramOptions
+    var options = new BlazorDiagramOptions
     {
       AllowMultiSelection = true, // Whether to allow multi selection using CTRL
-      Links = new DiagramLinkOptions
+      Links = 
       {
       },
-      Zoom = new DiagramZoomOptions
+      Zoom = 
       {
         Minimum = 0.5, // Minimum zoom value
         Inverse = false, // Whether to inverse the direction of the zoom when using the wheel
       }
     };
-    Diagram = new Diagram(options);
+    Diagram = new BlazorDiagram(options);
     
     Setup();
   }
