Add new Blazor.Diagrams.Widgets namespace

--- a/samples/SharedDemo/Demos/Simple.razor
+++ b/samples/SharedDemo/Demos/Simple.razor
@@ -33,6 +33,7 @@
     <DiagramCanvas>
         <Widgets>
             <NavigatorWidget Width="300" Height="200" DefaultStyle="true"></NavigatorWidget>
+            <SelectionBoxWidget />
         </Widgets>
     </DiagramCanvas>
 </CascadingValue>
