--- a/samples/SharedDemo/_Imports.razor
+++ b/samples/SharedDemo/_Imports.razor
@@ -8,4 +8,5 @@
 @using Blazor.Diagrams.Core.Extensions;
 @using Blazor.Diagrams.Core.Geometry;
 @using Blazor.Diagrams.Components.Renderers;
+@using Blazor.Diagrams.Components.Widgets;
 @using SharedDemo.Components;
