--- a/samples/SharedDemo/Demos/Simple.razor
+++ b/samples/SharedDemo/Demos/Simple.razor
@@ -34,6 +34,7 @@
         <Widgets>
             <NavigatorWidget Width="300" Height="200" DefaultStyle="true"></NavigatorWidget>
             <SelectionBoxWidget />
+            <GridWidget />
         </Widgets>
     </DiagramCanvas>
 </CascadingValue>
