--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -4,8 +4,8 @@
     border-radius: 10px;
     background-color: #f5f5f5;
     border: 1px solid #e8e8e8;
-    -webkit-box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0,0,0,.12);
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0,0,0,.12);
+    -webkit-box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, .12);
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, .12);
     position: relative;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -18,68 +18,68 @@
     justify-content: center;
 }
 
-    .default-node.selected {
-        border: 1px solid #6e9fd4;
-    }
+.default-node.selected {
+    border: 1px solid #6e9fd4;
+}
 
-        .default-node.selected .port {
-            border: 1px solid #6e9fd4;
-        }
+.default-node.selected .port {
+    border: 1px solid #6e9fd4;
+}
 
-    .default-node .port, .default.group .port {
-        width: 20px;
-        height: 20px;
-        margin: -10px;
-        border-radius: 50%;
-        background-color: #f5f5f5;
-        border: 1px solid #d4d4d4;
-        cursor: pointer;
-        position: absolute;
-    }
+.default-node .port, .default.group .port {
+    width: 20px;
+    height: 20px;
+    margin: -10px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+    border: 1px solid #d4d4d4;
+    cursor: pointer;
+    position: absolute;
+}
 
-        .default-node .port:hover, .default-node .port.has-links, .default.group .port.has-links {
-            background-color: black;
-        }
+.default-node .port:hover, .default-node .port.has-links, .default.group .port.has-links {
+    background-color: black;
+}
 
-        .default-node .port.bottom, .default.group .port.bottom {
-            bottom: 0px;
-            left: 50%;
-        }
+.default-node .port.bottom, .default.group .port.bottom {
+    bottom: 0px;
+    left: 50%;
+}
 
-        .default-node .port.bottomleft, .default.group .port.bottomleft {
-            bottom: 0px;
-            left: 0px;
-        }
+.default-node .port.bottomleft, .default.group .port.bottomleft {
+    bottom: 0px;
+    left: 0px;
+}
 
-        .default-node .port.bottomright, .default.group .port.bottomright {
-            bottom: 0px;
-            right: 0px;
-        }
+.default-node .port.bottomright, .default.group .port.bottomright {
+    bottom: 0px;
+    right: 0px;
+}
 
-        .default-node .port.top, .default.group .port.top {
-            top: 0px;
-            left: 50%;
-        }
+.default-node .port.top, .default.group .port.top {
+    top: 0px;
+    left: 50%;
+}
 
-        .default-node .port.topleft, .default.group .port.topleft {
-            top: 0px;
-            left: 0px;
-        }
+.default-node .port.topleft, .default.group .port.topleft {
+    top: 0px;
+    left: 0px;
+}
 
-        .default-node .port.topright, .default.group .port.topright {
-            top: 0px;
-            right: 0px;
-        }
+.default-node .port.topright, .default.group .port.topright {
+    top: 0px;
+    right: 0px;
+}
 
-        .default-node .port.left, .default.group .port.left {
-            left: 0px;
-            top: 50%;
-        }
+.default-node .port.left, .default.group .port.left {
+    left: 0px;
+    top: 50%;
+}
 
-        .default-node .port.right, .default.group .port.right {
-            right: 0px;
-            top: 50%;
-        }
+.default-node .port.right, .default.group .port.right {
+    right: 0px;
+    top: 50%;
+}
 
 .diagram-navigator.default {
     position: absolute;
@@ -96,9 +96,9 @@ div.group.default {
     background: rgb(198, 198, 198);
 }
 
-    div.group.default.selected {
-        outline: 2px solid #6e9fd4;
-    }
+div.group.default.selected {
+    outline: 2px solid #6e9fd4;
+}
 
 g.group.default rect {
     outline: 2px solid black;
@@ -126,4 +126,5 @@ g.group.default.selected > rect {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+
 /*# sourceMappingURL=wwwroot\default.styles.css.map */
