--- a/samples/SharedDemo/Demos/SnapToGrid.razor
+++ b/samples/SharedDemo/Demos/SnapToGrid.razor
@@ -16,9 +16,10 @@
 }
 
 <CascadingValue Value="BlazorDiagram">
-    <DiagramCanvas Class="grid">
+    <DiagramCanvas>
         <Widgets>
             <NavigatorWidget Width="300" Height="200" DefaultStyle="true"></NavigatorWidget>
+            <GridWidget Size="50" Mode="GridMode.Line" ZoomThreshold="0.5"></GridWidget>
         </Widgets>
     </DiagramCanvas>
 </CascadingValue>
