Render link labels without foreignObejct in widget no MarkupString

--- a/src/Blazor.Diagrams/Components/DefaultLinkLabelWidget.razor
+++ b/src/Blazor.Diagrams/Components/DefaultLinkLabelWidget.razor
@@ -1,13 +1,10 @@
-﻿@((MarkupString)$"<foreignObject x=\"{X.ToInvariantString()}\" y=\"{Y.ToInvariantString()}\"><div class=\"link-label\">{Label.Content}</div></foreignObject>")
+﻿<div class="link-label">
+    @Label.Content
+</div>
 
 @code {
 
     [Parameter]
-    public LinkLabelModel Label { get; set; }
+    public LinkLabelModel Label { get; set; } = null!;
 
-    [Parameter]
-    public Point Position { get; set; }
-
-    private double X => Position.X + (Label.Offset?.X ?? 0);
-    private double Y => Position.Y + (Label.Offset?.Y ?? 0);
 }
