--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -83,7 +83,7 @@
     pointer-events: none;
 }
 
-.link foreignObject {
+.link foreignObject.link-label {
     overflow: visible;
     pointer-events: none;
 }
