Add experimental Link to Link

--- a/samples/SharedDemo/Demos/DevTests.razor
+++ b/samples/SharedDemo/Demos/DevTests.razor
@@ -1,6 +1,7 @@
 ﻿@page "/demos/dynamic-anchor"
 @layout DemoLayout
 @using Blazor.Diagrams
+@using Blazor.Diagrams.Core.Anchors
 @using Blazor.Diagrams.Core.Anchors.Dynamic
 @using Blazor.Diagrams.Core.Controls
 @using Blazor.Diagrams.Core.Positions
@@ -17,6 +18,7 @@
     {
         var node1 = NewNode(100, 100);
         var node2 = NewNode(300, 100);
+        var node3 = NewNode(500, 250);
 
         var providers1 = new IPositionProvider[]
         {
@@ -41,19 +43,25 @@
             TargetMarker = LinkMarker.Arrow
         };
 
-        _blazorDiagram.Nodes.Add(new[] { node1, node2 });
+        _blazorDiagram.Nodes.Add(new[] { node1, node2, node3 });
         _blazorDiagram.Links.Add(link1);
-        
+        _blazorDiagram.Links.Add(new LinkModel(new ShapeIntersectionAnchor(node3), new LinkAnchor(link1, 0.5))
+        {
+            PathGenerator = PathGenerators.Straight,
+            SourceMarker = LinkMarker.Arrow,
+            TargetMarker = LinkMarker.Arrow
+        });
+
         _blazorDiagram.Controls.AddFor(node1)
             .Add(new RemoveControl(1, 0))
             .Add(new DragNewLinkControl(1, 0.5, 20))
             .Add(new BoundaryControl());
-        
+
         _blazorDiagram.Controls.AddFor(node2)
             .Add(new RemoveControl(1, 0))
             .Add(new DragNewLinkControl(1, 0.5, 20))
             .Add(new BoundaryControl());
-        
+
         _blazorDiagram.Controls.AddFor(link1)
             .Add(new RemoveControl(new LinkPathPositionProvider(0.1)))
             .Add(new BoundaryControl());
@@ -68,4 +76,5 @@
         node.AddPort(PortAlignment.Right);
         return node;
     }
+
 }
